--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p><strong> Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></strong></p>
         
         <ul>
-            <li><strong>Student's Name</strong></li>
+            <li><strong>Yelim Kang</strong></li>
             <li><strong>ITMD-361</strong></li>
             <li><strong>Lab 2</strong></li>
         </ul>
